--- a/index.html
+++ b/index.html
@@ -75,23 +75,39 @@
                    </table>
                 </p>
                 <p>
-                   <h2><i class="fas fa-pencil-alt"></i> UI/UX Design</h2>
+                   <h2><i class="fas fa-wrench"></i> Prototyping Tools</h2>
                    <table>
                        <tr>
                            <td>Adobe xD</td>
                            <td>Photoshop</td>
                            <td>After Effects</td>
                            <td>Gimp 2</td>
+                           <td>CorelDRAW</td>
                            <td>Microsoft Paint :p</td>
                        </tr>
                    </table>
                 </p>
                 <p>
-                   <h2>🤷</h2>
+                   <h2><i class="fas fa-pencil-alt"></i> UX Methods</h2>
+                   <table>
+                       <tr>
+                           <td>Persona</td>
+                           <td>Wireframing</td>
+                           <td>Usability Testing</td>
+                           <td>User Research</td>
+                           <td>Storyboarding</td>
+                           <td>Task Flow</td>
+                           <td>Card Sorting</td>
+                       </tr>
+                   </table>
+                </p>
+                <p>
+                   <h2>🤷 Things I'm Learning Right Now</h2>
                    <table>
                     <tr>
                         <td>Dialogflow</td>
-                        <td>CorelDRAW</td>
+                        <td>Python</td>
+                        <td>React</td>
                         <td>3dsMax</td>
                         <td>Unity</td>
                     </tr>
