--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <div id="design" style="display:none;">
                     <div class="project">
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424634/nav-micro.gif">
+                        <h1>Tab Navigation Interaction</h1>
                     </div>
                     <div class="project">
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_4x.png">
