--- a/index.html
+++ b/index.html
@@ -186,30 +186,39 @@
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424634/nav-micro.gif">
                     </div>
                     <div class="project">
+                        <h3>YouTube Redesign Concept</h3>
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_4x.png">
                     </div>
                     <div class="project">
+                        <h3>Facebook Redesign Concept</h3>
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1_4x.png">
                     </div>
                      <div class="project">
+                         <h3>Search Box Microinteraction</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif">
                      </div>
                      <div class="project">
+                         <h3>Design the Dream ☁️🌜</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5377526/lol_4x.png">
                      </div>
                      <div class="project">
+                         <h3>Random Login Screen Thingy ¯\_(ツ)_/¯</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5375361/custom_size___1_4x.png">
                      </div>
                      <div class="project">
+                         <h3>Discord App Redesign Concept</h3>
                             <img src="https://cdn.dribbble.com/users/2574485/screenshots/5357543/custom_size___1_4x.png">
                         </div>
                         <div class="project">
+                            <h3>Halloween Vibes</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5348291/web_1920___1_4x.png">
                      </div>
                      <div class="project">
+                         <h3>Twitter App Redesign</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_4x.png">
                      </div>
                      <div class="project">
+                         <h3>Twitch Home Page Redesign Concept</h3>
                          <img src="https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png">
                      </div>
                 </div>
