--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side." property="og:title">
+    <meta name="description" content="hi imfunny, a front-end developer and UI/UX Designer who’s comfortable with the server-side." property="og:title">
     <meta name="keywords" content="FrontEnd Developer,UI/UX Designer,Backend,Designer,HTML5,CSS3,JavaScript,website, Web Dev">
     <meta name="author" content="imfunny">
     <meta property="og:title" content="imfunny.">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side." />
-    <meta property="og:image" content="https://imfunniee.github.io/og.png">
+    <meta property="og:description" content="hi imfunny, a front-end developer and UI/UX Designer who’s comfortable with the server-side." />
+    <meta property="og:image" content="https://imfunniee.github.io/icon.png">
     <meta property="og:url" content="https://imfunniee.github.io/">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="imfunny.">
-    <meta property="twitter:description" content="hi imfunny, a Junior front-end developer and UI/UX Designer who’s comfortable with the server-side." />
-    <meta property="twitter:image" content="https://imfunniee.github.io/og.png">
+    <meta property="twitter:description" content="hi imfunny, a front-end developer and UI/UX Designer who’s comfortable with the server-side." />
+    <meta property="twitter:image" content="https://imfunniee.github.io/icon.png">
     <meta property="twitter:url" content="https://imfunniee.github.io/">
     <link rel="icon" href="https://imfunniee.github.io/icon.png" type="image/png" />
     <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
