--- a/meteo/index.html
+++ b/meteo/index.html
@@ -81,7 +81,7 @@
          </center>
       </div>
       <div id="made">
-         <h3>made by imfunny with love and a keyboard</h3>
+         <h3>made on earth by a human</h3>
       </div>
       <script type="text/javascript">
          function displayWh(){
