--- a/zucc/index.html
+++ b/zucc/index.html
@@ -15,6 +15,7 @@
             <b>mark youtube {search string}, </b>
             <b>mark google {search string}</b><br>
             <b>under construction...</b>
+        <p><b>made on earth by a human</b></p>
     </div>
     <div id="everything"></div>
     </center>
