--- a/ismydevicecharging/index.html
+++ b/ismydevicecharging/index.html
@@ -109,7 +109,7 @@ updatethislul(battery);
 <div id="question">is my device charging</div>
 <div id="chargingornot">your browser does not support battery status thingy :(</div>
 <div id="chargelevel">level comes here</div>
-<div id="isthisnecessary">made by <a href="https://instagram.com/imfunny10" target="_blank">im funny</a> with ♡ and a keyboard</div>
+<div id="isthisnecessary">made on earth by a human</div>
 </center>
 </body>
 </html>
