--- a/meteo/index.html
+++ b/meteo/index.html
@@ -73,7 +73,7 @@
          <center>
             <div id="error1" style="display:inherit;">
                <div id="emoji">☝️</div>
-               <p>search for a city by clicking on that search thingy</p>
+               <p>search for a city by clicking on that search thingy (yahoo might have changed their api if it doesn't work, hmu)</p>
             </div>
             <div id="error2" style="display:none;">
                <p>oopsie!! no data to show ;(</p>
