--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
 
                 <div id="design" style="display:none;">
                     <div class="project">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5804731/wybemf.png">
+                    </div>
+                    <div class="project">
                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424634/nav-micro.gif">
                     </div>
                     <div class="project">
