--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
                     <span onclick="showdes()" id="des-btn">designs.</span></h1>
                  <div id="web">
                   <div class="project">
-                          <h1>wybemf</h1>
-                          <h3>open source platform to connect dreamers (my dream project)</h3>
+                      <h1>wybemf<sup>beta</sup></h1>
+                          <h3>a platform to connect dreamers (dream project)</h3>
                           <a href="https://wybemfapp.firebaseapp.com/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                          <a href="https://github.com/imfunniee/wybemf" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                   </div>
                  <div class="project">
                         <h1>senno</h1>
