--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <span onclick="showdes()" id="des-btn">designs.</span></h1>
                  <div id="web">
                   <div class="project">
-                      <h1>wybemf<sup>beta</sup></h1>
+                      <h1>wybemf</h1>
                           <h3>a platform to connect dreamers (dream project)</h3>
                           <a href="https://wybemfapp.firebaseapp.com/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                   </div>
