--- a/grip/index.html
+++ b/grip/index.html
@@ -9,6 +9,19 @@
     <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
-    ok, umm... cool cool
+    <header>
+        <table>
+            <tr>
+                <td class="logo">Logo</td>
+                <td>
+                    <nav>
+                        <a href="">Home</a>
+                        <a href="">About</a>
+                        <a href="">Contact</a>
+                    </nav>
+                </td>
+            </tr>
+        </table>
+    </header>
 </body>
 </html>
