--- a/pluto/index.html
+++ b/pluto/index.html
@@ -26,7 +26,7 @@
      <textarea id="yourmessage" rows="4"></textarea><br><button id="send">send</button>
     </label>
      <p id="idkifthisthingisrequiredbutitisiguess">
-        made on earth by a human <a href="how.html">how does this thing works??</a>
+        made by imfunny with love and a keyboard <a href="how.html">how does this thing works??</a>
      </p>
     </div>
     <div id="main-main" class="animated fadeIn" style="display:none;">
@@ -70,7 +70,7 @@
 
     peer.on('stream', function(stream){
         var video = document.getElementById('video');
-        video.src = window.URL.createObjectURL(stream);
+        video.srcObject = stream;
         console.log(video.src);
         video.play();
     });
@@ -78,6 +78,7 @@
 .catch(function(err) {
     console.log(err);
 });
+
     </script>
 </body>
 </html>
