--- a/pluto/how.html
+++ b/pluto/how.html
@@ -23,7 +23,7 @@
 <h4>#1 in the url makes you peer1/person 1 and the other person/your firend peer2 so ye tell your firend to open up the site without "#1" in url</h4>
 <h4>if it doesn't work create an issue on github (https://github.com/imfunniee/Pluto) </h4>
 <p id="idkifthisthingisrequiredbutitisiguess">
-        made by imfunny with love and a keyboard <a href="how.html">how does this thing works??</a>
+        made on earth by a human <a href="index.html">home</a>
      </p>
     </div>
 </body>
