--- a/grip/index.html
+++ b/grip/index.html
@@ -12,7 +12,7 @@
     <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
-    <header>
+    <header id="header">
         <table>
             <tr>
                 <td class="logo"><i class="fas fa-utensils"></i></td>
