--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <div class="project">
                           <h1>wybemf</h1>
                           <h3>a social networking platform to connect dreamers and achievers</h3>
-                          <a href="https://wybemfapp.firebaseapp.com/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                          <a href="https://wybemf.com" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                   </div>
                  <div class="project">
                         <h1>senno</h1>
