--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
               <div id="contact">
                  <p>contact.</p> 
                  <div id="details">
-                       <a href="mailto:imfunny@getnada.com"><i class="far fa-envelope what-second-div"></i></a>
+                       <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
-                       <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
+                       <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                  </div>   
              </div>
              <center id="in_mobile"><b>made on earth by a human</b></center>
