--- a/countdown/index.html
+++ b/countdown/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>KH3 Countdown</title>
+    <title>Christmas 2019 Countdown</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -14,12 +14,13 @@
      <div id="loading">
         <div id="spinner"></div>
     </div>
+    <div id="background"></div>
     <center>
         <div id="days"></div>
         <div id="hours"></div>
         <div id="minutes"></div>
         <div id="seconds"></div>
-        <h2>Kingdom Hearts III Countdown</h2>
+        <h2>Christmas 2019 Countdown</h2>
         <div id="time-container">
         </div>
         <p>made on earth by a human</p>
