--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">    
 </head>
@@ -81,33 +81,59 @@
                            <td>NodeJS</td>
                            <td>PHP</td>
                            <td>Firebase</td>
+                           <td>MonogoDB</td>
                        </tr>
                    </table>
                 </p>
                 <p>
-                   <h2><i class="fas fa-pencil-alt"></i> UI/UX Design</h2>
+                   <h2><i class="fas fa-tools"></i> Prototyping Tools</h2>
                    <table>
                        <tr>
                            <td>Adobe xD</td>
                            <td>Photoshop</td>
                            <td>After Effects</td>
                            <td>Gimp 2</td>
-                           <td>Microsoft Paint :p</td>
+                           <td>Dreamweaver</td>
+                           <td>CorelDraw</td>
+                       </tr>
+                   </table>
+                </p>
+                 <p>
+                   <h2><i class="fas fa-stream"></i> UX Methods</h2>
+                   <table>
+                       <tr>
+                           <td>Persona</td>
+                           <td>Storyboarding</td>
+                           <td>Usability Testing</td>
+                           <td>Wireframing</td>
+                           <td>Survey</td>
+                           <td>Card Sorting</td>
+                           <td>Task Flow</td>
                        </tr>
                    </table>
                 </p>
                 <p>
-                   <h2>🤷</h2>
+                   <h2><i class="fas fa-ghost"></i></h2>
                    <table>
                     <tr>
                         <td>Dialogflow</td>
                         <td>CorelDRAW</td>
                         <td>3dsMax</td>
                         <td>Unity</td>
+                        <td>Python</td>
+                        <td>C++</td>
                     </tr>
                     </table>
                 </p>
-
+                <h2><i class="fas fa-chalkboard"></i> Learning</h2>
+                   <table>
+                    <tr>
+                        <td>Kubernetes</td>
+                        <td>Elixir</td>
+                    </tr>
+                    </table>
+                </p>
+                
                     <p></p>
                     I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
                     Although I'm very familiar with using frameworks, my websites are primarily hand-coded using HTML5, CSS3, SVG & JavaScript.
@@ -123,7 +149,7 @@
                   <div class="project">
                           <h1>wybemf</h1>
                           <h3>a social networking platform to connect dreamers and achievers</h3>
-                          <a href="https://wybemf.com" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                          <a href="https://wybemfapp.firebaseapp.com/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                   </div>
                  <div class="project">
                         <h1>senno</h1>
@@ -227,9 +253,9 @@
               <div id="contact">
                  <p>contact.</p> 
                  <div id="details">
-                       <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
+                       <a href="mailto:imfunny@getnada.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
-                       <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
+                       <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                  </div>   
              </div>
              <center id="in_mobile"><b>made on earth by a human</b></center>
