--- a/fimbo/index.html
+++ b/fimbo/index.html
@@ -24,21 +24,21 @@
           <div class="temp_image" style="background:url('img/1.png') center center;"></div>
             <div id="title">Tatum</div>
             <div id="downloads">6 downloads</div>
-            <button class="btn_one">live.</button>
+            <a href="https://imfunniee.github.io/template/1/" target="_blank"><button class="btn_one">live.</button></a>
             <button class="btn_two">download.</button>
         </div>
         <div class="template">
             <div class="temp_image" style="background:url('img/2.png') center center;"></div>
               <div id="title">Flynn</div>
               <div id="downloads">8 downloads</div>
-              <button class="btn_one">live.</button>
+              <a href="https://imfunniee.github.io/template/2/" target="_blank"><button class="btn_one">live.</button></a>
               <button class="btn_two">download.</button>
         </div>
         <div class="template">
             <div class="temp_image" style="background:url('img/3.png') center center;"></div>
               <div id="title">Foster</div>
               <div id="downloads">12 downloads</div>
-              <button class="btn_one">live.</button>
+              <a href="https://imfunniee.github.io/template/3/" target="_blank"><button class="btn_one">live.</button></a>
               <button class="btn_two">download.</button>
           </div>
     </div>
