--- a/fimbo/index.html
+++ b/fimbo/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta property="og:title" content="Customizable, Free to use, Mobile Responsive Templates">
+        <meta property="og:description" content="Customizable, Free to use, Mobile Responsive Templates">
         <meta property="og:title" content="fimbo.">
         <title>fimbo.</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="index.css">
         </head>
 <body>
+    <div id="loading">
+    <div id="spinner"></div>
+    </div>
     <div id="header">
         <div id="logo">fimbo.</div>
     </div>
