--- a/fimbo/index.html
+++ b/fimbo/index.html
@@ -50,4 +50,5 @@
         <h3>more templates yet to come... 👀⏰</h3>
         <h3>made on earth by a human</h3>
     </div>
+        <script src="index.js" type="text/javascript"></script>
 </body>
