--- a/zeva/index.html
+++ b/zeva/index.html
@@ -159,7 +159,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script type="text/javascript">
     var typed = new Typed('#is', {
-    strings: ["modern","easy to use","minimalist","just 2KB in size","easy to learn","a freamework"],
+    strings: ["modern","easy to use","minimalist","just 2KB in size","easy to learn","a framework"],
     typeSpeed: 100,
     smartBackspace: false,
     backSpeed: 100,
