--- a/zeva/index.html
+++ b/zeva/index.html
@@ -57,8 +57,8 @@
                 </a>
             </div>
             <div class="box">
-                <h2>NPM</h2>
-                <div class="source">coming soon</div>
+                <h2>CDN</h2>
+                <div class="source">https://cdn.jsdelivr.net/gh/imfunniee/zeva/index.css</div>
             </div>
             <div class="box">
                 <h2>Include this for using icons</h2>
