--- a/grip/index.html
+++ b/grip/index.html
@@ -26,7 +26,8 @@
         <h3>Enter a Username & Address to Continue</h3>
         <input type="text" placeholder="username" id="username"><br>
         <input type="text" placeholder="Address" id="address"><br><br>
-        <button id="continue" class="button">Continue</button>
+        <button id="continue" class="button">Continue</button><br>
+        No Personal Info :)
         <h3 id="errorSignIn"></h3>
     </div>
 <div class="box" id="for_res">
